# galaxy-flow

./: .gitignore  .run.gxl  AI_COMPLETE.md  AI_GETTING_STARTED.md  CHANGELOG.md  CHANGELOG_CN.md  Cargo.toml  README.md  RELEASE_NOTES.md  dev-work.md  doc-work.md  gflow_task_config.toml  link2.txt  openai_test.rs  result.json  temp_test.rs  test_openai.sh  version.txt
.github/workflows/: build-and-test.yml  check.yml  release.yml  rust.yml
_gal/: adm.gxl  ai-roles.yaml  ai-roles.yml  ai.gxl  ai_git.gxl  head.gxl  work.gxl
_gal/ai-native/: test-ai-connection.sh
_gal/ai-rules/: developer_rules.txt  global_rules.txt
_gal/ai-rules/analyst_rules/: analysis_methods.mdc  basic_principles.mdc  output_requirements.mdc
_gal/ai-rules/galactiward/: gxl.mdc
_gal/ai-rules/reviewer_rules/: best_practices.mdc  code_review.mdc  quality_standards.mdc
_gal/mods/: git.gxl  rust.gxl  ver.gxl
_gal/tests/: _all.gxl  os_test.gxl  ssh.gxl
_gal/tests/.os_data/: os_test.rgl  os_test_ln.rgl
app/gflow/: main.rs
app/gprj/: args.rs  main.rs  vault.rs
crates/gxl-ai/: Cargo.toml
crates/gxl-ai/src/: client.rs  git_integration.rs  lib.rs  models.rs
crates/orion_ai/: Cargo.toml
crates/orion_ai/examples/: git_push_example.rs  git_workflow_debug.rs  git_workflow_example.rs  request.json  response.json
crates/orion_ai/src/: capabilities.rs  const_val.rs  error.rs  factory.rs  function_calling.rs  lib.rs  provider.rs  roleid.rs  router.rs
crates/orion_ai/tests/: function_calling_test.rs  openai_format_test.rs  openai_response_converter_test.rs  thread_integration_test.rs
crates/orion_common/: Cargo.toml
crates/orion_infra/: Cargo.toml
crates/orion_parse/: Cargo.toml
crates/orion_parse/src/: atom.rs  comment.rs  define.rs  lib.rs  scope.rs  scope2.rs  sql_symbol.rs  symbol.rs  utils.rs
crates/orion_parse/src/cond/: mod.rs  parser.rs  test.rs
crates/orion_parse/src/fun/: fun_trait.rs  parser.rs
crates/orion_parse/src/net/: mod.rs
crates/orion_sec/: Cargo.toml
crates/orion_sec/src/: lib.rs  sec.rs
docs/: gxlang.md  inner.md  syntax.md
docs/design/ai/: thread-recording-requirements.md
docs/provider-registration/: README.md
docs/structure/: ability-actual.md  ability.md  calculate-actual.md  calculate.md  conf-actual.md  conf.md  evaluator-actual.md  evaluator.md  model-actual.md  model.md  parser-actual.md  parser.md  project-structure-actual.md  util-actual.md  util.md
example/_gal/: prj.gxl
example/conf/: value.toml
example/conf/export/: test.sh
example/conf/options/: nginx.conf  test.sh  vars.ini
example/conf/tpls/: test.sh
example/conf/used/: nginx_ex.conf
examples/: .gitignore  AI_CONFIG_USAGE.md  ai-test.gxl  ai.gxl  ai_config_example.yml  ai_demo.rs
examples/ai/: code_diff.txt
examples/ai/_gal/: ai-roles.yml  work.gxl
examples/ai_fun_basic/: README.md
examples/ai_fun_basic/_gal/: work.gxl
examples/assert/_gal/: work.gxl
examples/dryrun/_gal/: work.gxl
examples/fun/: var2.ini
examples/fun/_gal/: work.gxl
examples/moduse/expect/: _all.gxl
examples/moduse/mods/: os.gxl  ssh.gxl
examples/read/: var.ini  var.json  var.yml  var_arr.yml
examples/read/_gal/: work.gxl
examples/shell/: demo.sh  demo_ex.sh  var_list.yml  var_obj.yml
examples/shell/_gal/: work.gxl
examples/template/_gal/: work.gxl
examples/template/conf/: value.json  value.toml
examples/transaction/_gal/: base.gxl  work.gxl
examples/vars/_gal/: work.gxl
src/: AI_DESIGN.md  config.toml  const_val.rs  err.rs  galaxy.rs  infra.rs  lib.rs  loader.rs  menu.rs  runner.rs  types.rs
src/ability/: ai.rs  ai_chat.rs  ai_fun.rs  archive.rs  artifact.rs  assert.rs  cmd.rs  delegate.rs  download.rs  echo.rs  err_conv.rs  gxl.rs  load.rs  mod.rs  prelude.rs  read.rs  shell.rs  tpl.rs  version.rs
src/ability/read/: cmd.rs  file.rs  integra.rs  mod.rs  stdin.rs
src/ai/: capabilities.rs  client.rs  config.rs  context.rs  error.rs  factory.rs  mod.rs  provider.rs  router.rs  tests.rs
src/ai/client/: builder.rs  client.rs  core.rs  mod.rs  tests.rs  utils.rs
src/ai/config/: ai_usage_rules.yaml  ai_usage_rules_test.rs  config_complete.rs  loader.rs  mod.rs  roles.json  roles.rs  roles.yaml  roles_simplified.yaml  simplified_config_test.rs  structures.rs  tests.rs  traits.rs
src/ai/providers/: mod.rs  (+5 more)
src/calculate/: compare.rs  cond.rs  defined.rs  dynval.rs  express.rs  logic.rs  mod.rs  traits.rs
src/cmd/: ai_command.rs
src/conf/: gxlconf.rs  mod.rs  mod_test.rs  oprator.rs
src/evaluator/: env_exp.rs  mod.rs
src/git_ai/: mod.rs  smart_commit.rs
src/model/: annotation.rs  context.rs  data.rs  error.rs  expect.rs  meta.rs  mod.rs  primitive.rs  report_center.rs  sec.rs  task_callback_result.rs  task_result.rs  traits.rs  var.rs
src/parser/: atom.rs  comment.rs  cond.rs  context.rs  define.rs  domain.rs  externs.rs  inner.rs  mod.rs  prelude.rs  stc_act.rs  stc_ann.rs  stc_base.rs  stc_blk.rs  stc_env.rs  stc_flw.rs  stc_mod.rs  stc_spc.rs
src/util/: accessor.rs  diagnose.rs  echo.sh  git.rs  git_check.sh  http_handle.rs  init_cmd.rs  macs.rs  mod.rs  opt.rs  path.rs  redirect.rs  remote_git.sh  serialize_time_format.rs  shell.rs  str_utils.rs  task_report.rs  traits.rs
tasks/: 2025-08-24_3_function-calling-comparison.md  2025-08-24_4_function-calling-completion.md  2025-08-24_5_openai_format_fix.md  2025-08-24_6_openai_request_format_example.md  ai-platform-extension-design.md  gxl-ai-implementation-plan.md  gxl-ai-native-design.md  gxl-variable-syntax-enhancement.md  module_structure_design.md  spelling-issues.md
tasks/ai-workflow-engine-integration/: OVERVIEW.md  README.md  implementation-plan.md  phase1-summary.md  phase2-guide.md
tests/: case_ability.rs  case_normal.rs  case_simple.rs  example_rg_test.rs  example_test.rs  examplest.rs  init_cmd_test.rs  menu_test.rs  self_tests.rs  test_layered_config.rs  thread_integration_test.rs
tests/material/: ability.gxl  case_cond.gxl  case_normal.gxl  case_simple.gxl  demo.sh  env_args.json  main.conf  main.toml  main.tpl  menu.gxl  rg-lib1.toml  rg-lib2.toml  run_web.gxl  simple_menu.gxl  x.tpl
(+152 files in other folders)
