
[package]
authors = ["wukong<sec-wukong@outlook.com>"]
edition = "2021"
name = "galaxy_flow"
version = "0.5.3"


[[bin]]
name = "gflow"
path = "app/gflow/main.rs"

[[bin]]
name = "gprj"
path = "app/gprj/main.rs"


[workspace]
members = [
    ".",
    "crates/orion_common",
    "crates/orion_parse",
    "crates/orion_infra",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
winnow = "0.6"
orion-error = "~0.3"
#orion-error = { path = "../orion-error" }
#orion-syspec = { path = "../orion-syspec" }
orion-syspec = { git = "https://github.com/galaxy-sec/orion-syspec.git", tag = "0.6.1" }
tokio = { version = "1.45", features = ["full"] }
derive_more = { version = "2.0", features = ["full"] }
async-trait = "0.1"

[dependencies]
orion_common = { path = "crates/orion_common" }
orion_parse = { path = "crates/orion_parse" }
orion_infra = { path = "crates/orion_infra" }
derive-getters = "0.5"
derive_builder = "0.20"
duct = "1.0.0"
duct_sh = "1.0.0"
thiserror = "2.0"
handlebars = "6.3"
http-types = "2.12"
lazy_static = "1.4"
log = "0.4"
git2 = "0.20"
mockall = "0.13"
once_cell = "1.19"
pretty_env_logger = "0.5"
regex = "1.10"
rust-ini = "0.21"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shells = "0.2"
toml = "0.8"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10.0"
os_info = "3"
winnow = { workspace = true }
colored = "3.0.0"
anyhow = "1.0.82"
include_dir = "0.7"
walkdir = "2.5"
wildmatch = "~2.4"
orion-error = { workspace = true }
orion-syspec = { workspace = true }
tokio = { workspace = true }
derive_more = { workspace = true }
async-trait = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12.11", features = ["json"] }
time = { version = "0.3.41", features = ["formatting"] }
serde_yml = "0.0.12"

[features]
res_depend_test = []


[dev-dependencies]
rstest = "0.25"
tempfile = "3.10"
