
[package]
authors = ["wukong<sec-wukong@outlook.com>"]
edition = "2021"
name = "galaxy_flow"
version = "0.10.3"


[[bin]]
name = "gflow"
path = "app/gflow/main.rs"

[[bin]]
name = "gprj"
path = "app/gprj/main.rs"


[workspace]
members = [".", "crates/orion_parse"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
winnow = "0.7.11"
orion-error = "~0.3"
orion_common = { git = "https://github.com/galaxy-sec/orion-common.git", branch = "main" }
orion_infra = { git = "https://github.com/galaxy-sec/orion-infra", branch = "main" }
orion_variate = { git = "https://github.com/galaxy-sec/orion-variate.git", tag = "v0.6.2" }
#orion_variate = { git = "https://github.com/galaxy-sec/orion-variate.git", tag = "main" }
#orion_variate = { path = "../orion_variate" }
#orion-error = { path = "../orion-error" }
#orion-syspec = { path = "../orion-syspec" }
tokio = { version = "~1.47", features = ["full"] }
derive_more = { version = "2.0", features = ["full"] }
async-trait = "0.1"

[dependencies]
orion_common = { workspace = true }
orion_infra = { workspace = true }
orion_parse = { path = "crates/orion_parse" }
orion_variate = { workspace = true }
derive-getters = "0.5"
derive_builder = "0.20"
derive_setters = "0.1"
getset = "0.1.6"
duct = "1.1.0"
duct_sh = "1.0.0"
fs_extra = "1.3"
home = "0.5"
thiserror = "~2.0"
handlebars = "6.3"
http-types = "2.12"
lazy_static = "~1.5"
chrono = "0.4.41"
log = "~0.4"
git2 = "0.20"
unicase = "~2.8"
scopeguard = "1.2.0"

rand = "0.9"
mockall = "0.13"
once_cell = "1.21"
pretty_env_logger = "0.5"
regex = "1.11"
rust-ini = "0.21"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shells = "0.2"
toml = "0.9"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.0"
os_info = "~3.12"
winnow = { workspace = true }
colored = "3.0.0"
anyhow = "1.0.82"
include_dir = "0.7"
walkdir = "2.5"
wildmatch = "~2.4"
dirs = "6.0"
indexmap = "2.10"
orion-error = { workspace = true }
tokio = { workspace = true }
derive_more = { workspace = true }
async-trait = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12.11", features = ["json"] }
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
serde_yaml = "0.9"
contracts = "0.6"
libc = "0.2.174"

[features]
res_depend_test = []


[dev-dependencies]
rstest = "0.26"
tempfile = "3.10"
