[package]
name = "gxl-ai"
version = "0.1.0"
edition = "2021"
authors = ["GXL AI原生工作流团队"]
description = "GXL AI原生工作流引擎 - 原生AI指令系统核心"
repository = "https://github.com/galaxy-sec/galaxy-flow"
license = "MIT"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# HTTP客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }

# JSON处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"

# 缓存能力
tokio-cache = "0.22"

# 配置管理
config = "0.14"

# 时间处理
chrono = "0.4"

# 日志
log = "0.4"
env_logger = "0.11"

# Git集成
git2 = "0.19"

[dev-dependencies]
test-log = "0.2"
tempfile = "3.8"
