[package]
name = "orion_parse"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
orion_common = { path = "../orion_common" }

#log = "~0.4"
#thiserror = "~2.0"
winnow = { workspace = true }
